<?xml version="1.0" encoding="UTF-8"?><!--
 Copyright (C) 2010 ZXing authors
 Copyright (C) 2012 Lukas Landis

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.


-->
<resources>

    <string name="app_name">ESR Scanner</string>
    <string name="address_dialog_title">Choose an address</string>
    <string name="address_new">Enter a new address</string>
    <string name="alert_title_information">Information</string>
    <string name="alert_dont_show_again">Don\'t show again!</string>
    <string name="bank_profile_default">Default</string>
    <string name="dialog_bank_profile_title">Bank profiles</string>
    <string name="bank_profile_name">Name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_export_again">Again</string>
    <string name="button_change">Change</string>
    <string name="button_copy_code_row">Copy code row</string>
    <string name="button_send_code_row">Send code row</string>
    <string name="button_switch_ime">Switch input method</string>
    <string name="button_send_reference_number">Send reference number</string>
    <string name="detail_title">Details</string>
    <string name="help_button_done">Done</string>
    <string name="help_button_back">Back</string>
    <string name="history_clear_text">Delete all</string>
    <string name="history_item_sent">Sent over Wifi</string>
    <string name="history_send_dta">DTA</string>
    <string name="history_send_dta_wlan">ESR Receiver</string>
    <string name="history_send_dta_email">email</string>
    <string name="history_send_dta_other">other&#8230;</string>
    <string name="history_send_dta_save">just save</string>
    <string name="history_send">CSV</string>
    <string name="history_email_title">ESR Scanner history</string>
    <string name="history_share_as_dta_title">DTA file from ESR Scanner</string>
    <string name="history_share_as_dta_summary">DTA should be attached.
        If there is no attachment, the email app didn\'t support it.
        So please, can you add the file \"%s\" manually.
    </string>
    <string name="history_title">History</string>
    <string name="history_clear_one_history_text">Delete payment</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No scans have been recorded</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_switch_ps">Switch type of payment slip</string>
    <string name="menu_switch_stream_mode">Stream mode</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="msg_address_line_to_long_20">The DTA file only allows 20 signs per line and 4
        lines. It will cut on export.
    </string>
    <string name="msg_address_line_to_long_24">The DTA file only allows 24 signs per line and 4
        lines. It will cut on export.
    </string>
    <string name="msg_saved">Successfully saved</string>
    <string name="msg_dta_saved">DTA file saved in %s</string>
    <string name="msg_database_saved">Backup successfully saved!</string>
    <string name="msg_database_restored">Data successfully restored!</string>
    <string name="msg_click_ok_to_export_again">Click OK if you want to include this payment in the
        next exported DTA.
    </string>
    <string name="msg_copied">Successfully copied</string>
    <string name="msg_not_copied">Unable to copy result to clipboard</string>
    <string name="msg_nothing_to_export">No payment to export.</string>
    <string name="msg_no_email_client">No email client found</string>
    <string name="msg_amount_not_valid">Amount is not valid.</string>
    <string name="msg_amount_is_empty">Please set the amount for the transfer to %s first.</string>
    <string name="msg_own_iban_is_not_set">To create DTA files your own IBAN is needed. Please write
        it down in Settings.
    </string>
    <string name="msg_own_iban_is_not_valid">IBAN is not valid. It has to be from switzerland.
    </string>
    <string name="msg_own_address_is_not_set">To create DTA files your own address is needed. Please
        write it down in Settings.
    </string>
    <string name="msg_stream_mode_not_available">Slip-reader mode only in a local network area
        available!
    </string>
    <string name="msg_coderow_saved">Code row saved!</string>
    <string name="msg_coderow_sent">Code row sent!</string>
    <string name="msg_coderow_not_sent">Unable to send code row. Did you set username/password correctly?
    </string>
    <string name="msg_confirm_delete_payment_title">Delete payment</string>
    <string name="msg_confirm_delete_message">You are about to delete the payment, OK to proceed?
    </string>
    <string name="msg_reason_line_to_long">The DTA file only allows 28 signs per line and 4 lines.
        It will cut on export.
    </string>
    <string name="msg_send_over_http_not_possible">Sending code row over http is not possible!</string>
    <string name="msg_touch_to_focus">Touch somewhere to focus!</string>
    <string name="msg_unsupported_field">The selected input doesn\'t support the needed
        characters!
    </string>
    <string name="msg_unsupported_orientation">ESRScanner only works in landscape orientation.
        Please rotate!
    </string>
    <string name="msg_wait_title">Please wait.</string>
    <string name="msg_wait_sending">Encrypting and sending code row&#8230;</string>
    <string name="notif_scan_to_clipboard_title">ESRScanner scan to clipboard</string>
    <string name="notif_scan_to_clipboard_summary">Tab to scan ESR to clipboard and return</string>
    <string name="picture">A little picture of a orange payment slip</string>
    <string name="preferences_copy_part_title">Scan result part to copy</string>
    <string name="preferences_only_macro_focus_title">Macro focus</string>
    <string name="preferences_no_continous_auto_focus_title">No continues auto focus</string>
    <string name="preferences_no_continous_auto_focus_summary">Use standard auto focus only</string>
    <string name="preferences_enable_torch_title">Enable front light</string>
    <string name="preferences_default_bank_title">Default bank profile</string>
    <string name="preferences_dta_format_title">DTA format settings</string>
    <string name="preferences_advanced_title">Advanced settings</string>
    <string name="preferences_play_beep_title">Play beep</string>
    <string name="preferences_character_whitelist_title">Character whitelist</string>
    <string name="preferences_reverse_image_title">Reversed camera image</string>
    <string name="preferences_reverse_image_summary">Enable on devices with a front camera only
    </string>
    <string name="preferences_address_title">Your Address</string>
    <string name="preferences_address_summary">At least your name/surname on the first line and
        ZIP/city on the second line
    </string>
    <string name="preferences_iban_title">Your IBAN</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_execution_day_title">Execution day</string>
    <string name="preferences_execution_day_summary">Day of pay execution every month</string>
    <string name="preferences_email_address_title">Default email address</string>
    <string name="preferences_email_address_summary"></string>
    <string name="preferences_enable_stream_mode_title">Enable slip-reader mode</string>
    <string name="preferences_enable_stream_mode_summary">Sends the recognized code row to your pc
    </string>
    <string name="preferences_backup_restore_title">Backup/Restore</string>
    <string name="preferences_backup_title">Backup</string>
    <string name="preferences_backup_summary">Tab to create backup of database and preferences on
        external storage.
    </string>
    <string name="preferences_restore_title">Restore</string>
    <string name="preferences_restore_summary">Tab to restore a previous backup. Existing data will
        be overwritten.
    </string>
    <string name="preferences_only_copy_title">Copy scan result over notification</string>
    <string name="preferences_only_copy_summary">If checked, a notification appears when leaving
        ESRScanner to scan directly to clipboard.
    </string>
    <string name="preferences_password_title">Password</string>
    <string name="preferences_password_summary">Password to encrypt code row</string>
    <string name="preferences_show_ocr_result_title">Show OCR result</string>
    <string name="preferences_show_scan_result_summary">If disabled, the ESR Scanner stays in the
        scan mode and doesn\'t loose the focus.
        But please check the payment before execute.
    </string>
    <string name="preferences_show_scan_result_title">Open history after each scan</string>
    <string name="preferences_stream_title">Payment slip stream mode</string>
    <string name="preferences_username_title">Username</string>
    <string name="preferences_username_summary">An email address as username is recommended</string>
    <string name="result_account">Account</string>
    <string name="result_address">Recipient</string>
    <string name="result_amount_not_set">0.00</string>
    <string name="result_dta_bank_profile">Bank profile</string>
    <string name="result_exported_dta">Payment exported in file</string>
    <string name="result_reference_number">Reference Number</string>
    <string name="result_reason">Reason</string>
    <string name="scanner_ime_label">ESR Scanner IME</string>
    <string name="status_view_ip_address">IP Address(es):%s</string>
    <string name="status_stream_mode_active">Payment slip stream mode active on\n%1$s:%2$d</string>
    <string name="subtype_esr_label">ESR Scanner IME</string>
    <string name="button_new">New</string>
    <string name="button_choose">Choose</string>
    <string name="bank_profile_iban">IBAN</string>
    <string name="preferences_bank_profile_title">Bank profiles</string>
    <string name="button_edit">Edit</string>
    <string name="preferences_new_bank_profile">New bank profile</string>
    <string name="preferences_edit_bank_profile">Edit default bank profile</string>
    <string name="preferences_default_bank_summary">Select default bank profile</string>
    <string name="msg_bank_profile_needs_name">The new bank profile needs a name</string>
    <string name="msg_how_to_enable_stream_mode">If you\'d like to use the payment stream mode, you have to set username/password in Preferences.</string>
    <string name="preferences_copy_part_summary">This option becomes active in payment slip stream mode and scanning over notification</string>

</resources>