<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/bank_profile_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/bank_profile_name"
        />

    <EditText
        android:id="@+id/bank_profile_iban"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/bank_profile_iban"
        />

    <TextView
        android:id="@+id/bank_profile_execution"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/preferences_execution_day_title"
        />

</LinearLayout>